--- a/stuff/_chat.scss
+++ b/stuff/_chat.scss
@@ -147,6 +147,9 @@
   .arrow-gKvcEx { display: none;}
 }
 
+// Stickers
+.stickerInspected-2EM4w- .inspectedIndicator-59EII8 { background-color: #6e85d321;}
+
 // Chat buttons
 .attachButton-2WznTc .attachButtonPlus-jWVFah,
 .attachButton-2WznTc:hover .attachButtonPlus-jWVFah { fill: var(--chat-buttons);}
