--- a/variables.scss
+++ b/variables.scss
@@ -13,7 +13,7 @@
 */
 
 /* ═══════『 🚫 ・ No scrollbars 』- Comment the line below if you want the scrollbar back */
-::-webkit-scrollbar { display: none !important;}.note-3HfJZ5 { margin-right: 0; }.content-1x5b-n { margin: 0 !important; border-radius: 0; }.mainContent-u_9PKf { padding-left: 8px;}.member-3-YXUe, [id*="private-channels-"] { margin: 0; max-width: unset; }.layout-2DM8Md { border-radius: 0; padding: 0 16px;}.unread-2lAfLh { z-index: 1;} .scroller-2hZ97C { padding-left: 0;}.scroller-2hZ97C > .content-3YMskv, .buttons-3JBrkn, .messagesPopout-24nkyi { padding-right: 10px !important; }.inviteRow-2L02ae {border-radius: 0; padding-left: 15px;}
+::-webkit-scrollbar { display: none;}.content-1x5b-n { margin: 0 !important; border-radius: 0; }.mainContent-u_9PKf { padding-left: 8px;}.container-2Pjhx- { margin: 0; max-width: unset; }.layout-2DM8Md { border-radius: 0; padding: 0 16px;}.unread-2lAfLh { z-index: 1;} .buttons-3JBrkn { padding-right: 10px !important;}
 
 /* ═══════『 🎵 ・ Powercord  seek bar 』- Comment the line below if you want the dafault one */
 .powercord-spotify .spotify-seek-bar-progress { background-color: var(--spotify-color) !important;} .powercord-spotify .spotify-seek-bar {position: absolute;bottom: 0;width: 240px; height: 56px;-webkit-mask-image: linear-gradient(0.25turn, #0009, #0003);mask-image: linear-gradient(0.25turn, #0009, #0003);}.powercord-spotify.hover .spotify-seek-bar { height: 64px; }.powercord-spotify .avatarWrapper-2yR4wp, .powercord-spotify .nameTag-3uD-yy, .spotify-buttons, .spotify-seek-duration { z-index: 1; } .spotify-extra-controls { position: relative; z-index: 1; } .powercord-spotify.hover .spotify-seek:not(.no-premium) .spotify-seek-bar { height: 79px !important;} .powercord-spotify .spotify-buttons, .spotify-extra-controls .button-14-BFJ.enabled-2cQ-u7:hover { background-color: transparent;}
